force-app/main/default/objects/Funnel_Scorecard__c/fields/O5_Met_3_BI_s_know_their_Win_Results__c.field-meta.xml
<CustomField>
    <fullName>O5_Met_3_BI_s_know_their_Win_Results__c</fullName>
    <inlineHelpText>BI&#39;s have communicated the business results this SSO will impact and told you their personal wins.</inlineHelpText>
    <label>O5 Met 3+ BI’s/know their Win-Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>