force-app/main/default/objects/Funnel_Scorecard__c/fields/O6_No_RFP_in_play_or_we_wrote_it__c.field-meta.xml
<CustomField>
    <fullName>O6_No_RFP_in_play_or_we_wrote_it__c</fullName>
    <inlineHelpText>Request for Proposal: 1) There isn&#39;t one in play 2) An RFP is in play but we had a high degree of influence in creating it, and the language/specifications.</inlineHelpText>
    <label>O6 No RFP in play or we wrote it</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>