force-app/main/default/objects/Funnel_Scorecard__c/fields/O6_Validated_solution_image_close_date__c.field-meta.xml
<CustomField>
    <fullName>O6_Validated_solution_image_close_date__c</fullName>
    <description>The SSO is relevant to the clients solution image and we have validated the SSO close date</description>
    <inlineHelpText>The client acknowledges the fit between our offerings and their concept (what they want to fix, accomplish or avoid) and the SSO close /  delivery date</inlineHelpText>
    <label>O6 Validated solution image &amp; close date</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>