force-app/main/default/objects/Funnel_Scorecard__c/fields/O7_Competition_anti_sponsor_identified__c.field-meta.xml
<CustomField>
    <fullName>O7_Competition_anti_sponsor_identified__c</fullName>
    <description>Internal and external competitive sources have been identified as well as any anti-sponsors</description>
    <inlineHelpText>You have defined your competitive position and are the frontrunner or sole source and have identified the competitor&#39;s coach(s)</inlineHelpText>
    <label>O7 Competition &amp; anti-sponsor identified</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>