force-app/main/default/objects/Funnel_Scorecard__c/fields/O7_Right_team_is_aligned_with_BI_s__c.field-meta.xml
<CustomField>
    <fullName>O7_Right_team_is_aligned_with_BI_s__c</fullName>
    <inlineHelpText>SC team is strategically aligned to appropriate BI/Peers &amp; where they are in the Buying Process; Implementation Team (MDO, Billing, Credit, etc.) is aligned to the UBI (s).</inlineHelpText>
    <label>O7 Right team is aligned with BI’s</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>