force-app/main/default/objects/Funnel_Scorecard__c/fields/O8_BI_s_are_in_growth_or_trouble_mode__c.field-meta.xml
<CustomField>
    <fullName>O8_BI_s_are_in_growth_or_trouble_mode__c</fullName>
    <description>Key BI&#39;s are in growth or trouble mode</description>
    <inlineHelpText>The key BI&#39;s have communicated to us and / or our coaches a sense of urgency as it relates to this SSO.</inlineHelpText>
    <label>O8 BI’s are in growth or trouble mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>