force-app/main/default/objects/Funnel_Scorecard__c/fields/O8_Identified_Anti_sponsor_Competition__c.field-meta.xml
<CustomField>
    <fullName>O8_Identified_Anti_sponsor_Competition__c</fullName>
    <inlineHelpText>You are clear about your competitive position, the competitors strengths/weaknesses &amp; their coach (our anti-sponsor).</inlineHelpText>
    <label>O8 Identified Anti-sponsor &amp; Competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>