force-app/main/default/objects/Funnel_Scorecard__c/fields/O9_Sales_stages_synch_with_buying_stages__c.field-meta.xml
<CustomField>
    <fullName>O9_Sales_stages_synch_with_buying_stages__c</fullName>
    <description>Our sales stages are synchronized with client buying process stages</description>
    <inlineHelpText>Commercial: Client validates our understanding of their process and our position in that process
A&amp;E: Client validates our understanding of their process and our position is aligned with their buying stage.</inlineHelpText>
    <label>O9 Sales stages synch with buying stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>