force-app/main/default/objects/Funnel_Scorecard__c/fields/O9_Taught_BI_something_new_valuable__c.field-meta.xml
<CustomField>
    <fullName>O9_Taught_BI_something_new_valuable__c</fullName>
    <inlineHelpText>BI&#39;s confirm you taught them something, bringing value to solve a problem and/or improve their business which also improves your credibility.</inlineHelpText>
    <label>O9 Taught BI something new &amp; valuable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>