force-app/main/default/objects/Funnel_Scorecard__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity_Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funnel Scorecards</relationshipLabel>
    <relationshipName>Funnel_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>