force-app/main/default/objects/Funnel_Scorecard__c/fields/Place_in_the_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Place_in_the_Funnel__c</fullName>
    <description>Indicates which stage, in the funnel , this opportunity is in based on the Miller Heiman funnel scorecard methodology.</description>
    <inlineHelpText>Indicates which stage, in the funnel , this opportunity is in based on the Miller Heiman funnel scorecard methodology.</inlineHelpText>
    <label>Place in the Funnel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 – 49 Universe</fullName>
            </value>
            <value>
                <fullName>50 – 59 Above the Funnel</fullName>
            </value>
            <value>
                <fullName>60 – 79 In the Funnel</fullName>
            </value>
            <value>
                <fullName>80 – 100 Best Few</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>