force-app/main/default/objects/Funnel_Scorecard__c/fields/Prior_Score__c.field-meta.xml
<CustomField>
    <fullName>Prior_Score__c</fullName>
    <label>Prior Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>