force-app/main/default/objects/Funnel_Scorecard__c/fields/Right_SC_team_aligned_in_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Right_SC_team_aligned_in_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Who are your selling partners? Operations? Credit? Home Services? Innovel? Executive Sponsor?</inlineHelpText>
    <label>Right SC team aligned in opportunity</label>
    <type>Checkbox</type>
</CustomField>