force-app/main/default/objects/Funnel_Scorecard__c/fields/Scorecard_B1_through_B8__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_B1_through_B8__c</fullName>
    <formula>VALUE(TEXT( B1_Willing_to_invest_in_viable_solutions__c ))+ 
VALUE(TEXT( B2_Client_values_long_term_relationship__c ))+ 
VALUE(TEXT( B3_SHC_footprint_is_aligned_with_clients__c ))+
VALUE(TEXT( B4_Client_gives_credit_for_brand_loyalty__c ))+
VALUE(TEXT( B5_Financial_Strength_is_creditworthy__c ))+
VALUE(TEXT( B6_Can_see_SHC_value_prop_in_diff_light__c ))+
VALUE(TEXT( B7_L_term_profitable_rev_for_investment__c ))+
VALUE(TEXT( B8_Client_buys_the_way_we_want_them_to__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorecard B1 through B8</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>