force-app/main/default/objects/Funnel_Scorecard__c/fields/Scorecard_B9_through_O6__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_B9_through_O6__c</fullName>
    <formula>VALUE(TEXT( B9_Client_engages_in_open_communication__c ))+
VALUE(TEXT( B10_Client_innovative_open_to_change__c ))+
VALUE(TEXT( O1_The_EBI_supports_our_solution__c ))+
VALUE(TEXT( O2_Coach_identified_and_is_influential__c ))+
VALUE(TEXT( O3_SHC_Uniquely_qualified_solution__c ))+
VALUE(TEXT( O4_We_know_the_BI_s_Win_Results__c ))+
VALUE(TEXT( O5_EBI_to_allocate_resources_for_the_SSO__c ))+
VALUE(TEXT( O6_Validated_solution_image_close_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorecard B9 through O6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>