force-app/main/default/objects/Funnel_Scorecard__c/fields/Scorecard_O7_through_O10__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_O7_through_O10__c</fullName>
    <formula>VALUE(TEXT( O7_Competition_anti_sponsor_identified__c ))+
VALUE(TEXT( O8_BI_s_are_in_growth_or_trouble_mode__c ))+
VALUE(TEXT( O9_Sales_stages_synch_with_buying_stages__c ))+
VALUE(TEXT( O10_BI_s_are_rated_3_or_for_the_SSO__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorecard O7 through O10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>