force-app/main/default/objects/Funnel_Scorecard__c/fields/Scorecard_O7_through_O10_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_O7_through_O10_Commercial__c</fullName>
    <description>Commercial Scores Only</description>
    <formula>VALUE(TEXT(  O7_Right_team_is_aligned_with_BI_s__c  ))+ 
VALUE(TEXT(  O8_Identified_Anti_sponsor_Competition__c  ))+ 
VALUE(TEXT(  O9_Taught_BI_something_new_valuable__c  ))+ 
VALUE(TEXT(  O10_We_are_not_matching_comps__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorecard O7 through O10 Commercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>