force-app/main/default/objects/Funnel_Scorecard__c/fields/Seller_has_id_BI_pain_pts_solution__c.field-meta.xml
<CustomField>
    <fullName>Seller_has_id_BI_pain_pts_solution__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the BI acknowledged your solution addresses their pain points?</inlineHelpText>
    <label>Seller has id BI pain pts &amp; solution</label>
    <type>Checkbox</type>
</CustomField>