force-app/main/default/objects/Funnel_Scorecard__c/fields/Service_relationship_trumps_lowest_price__c.field-meta.xml
<CustomField>
    <fullName>Service_relationship_trumps_lowest_price__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>How has the BI demonstrated that they are willing to pay more for great service or a strong relationship?</inlineHelpText>
    <label>Service/relationship trumps lowest price</label>
    <type>Checkbox</type>
</CustomField>