force-app/main/default/objects/Funnel_Scorecard__c/fields/Taught_BI_something_new_valuable__c.field-meta.xml
<CustomField>
    <fullName>Taught_BI_something_new_valuable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>What did you teach the BI that was new and how did it add value to demonstrate you can be a trusted adviser?</inlineHelpText>
    <label>Taught BI something new &amp; valuable</label>
    <type>Checkbox</type>
</CustomField>